# rl-factory-thesis

./: .gitignore  README.md
results/baseline_results/: random_baseline_episodes.csv  random_baseline_summary.csv
results/evaluation_results/: evaluation_episodes.csv  evaluation_summary.csv
ros2_ws/src/factory_nav_rl/: package.xml  setup.cfg  setup.py
ros2_ws/src/factory_nav_rl/factory_nav_rl/: env_factory_nav.py  evaluate.py  evaluate_random.py  generate_stage3_figures.py  generate_thesis_figures.py  plot_results.py  train_curriculum.py  train_ppo.py  visualize_demo.py
ros2_ws/src/picarx_description/: CMakeLists.txt  package.xml
ros2_ws/src/picarx_description/models/picarx/: model.config  model.sdf
ros2_ws/src/picarx_gz/: package.xml  setup.cfg  setup.py
ros2_ws/src/picarx_gz/picarx_gz/: bridge.launch.py  launch_world.py
ros2_ws/src/picarx_gz/worlds/: factory.world  factory.world.sdf  factory.world1.sdf  factorytest.sdf
