<?xml version="1.0"?>
<package format="3">
  <name>picarx_description</name>
  <version>0.0.1</version>
  <description>PiCar-X model and description</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
